# python-project-49

./: Makefile  READ.md  README.md  brain-prime  brain_calc_demo.cast  brain_gcd_demo.cast  brain_prime_demo.cast  brain_progression_demo.cast  pyproject.toml
brain_games/: engine.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  pyproject.toml
